predict_proba working

--- a/kaala-mark2.ipynb
+++ b/kaala-mark2.ipynb
@@ -312,92 +312,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=69)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier(n_neighbors = 3)\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "model = DecisionTreeClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "model = RandomForestClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "model = GradientBoostingClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import Ada\n",
-    "model = AdaBoostClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,70 +345,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model = LogisticRegression() # penalty='l1', tol = 0.001\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "accuracy_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier(n_neighbors = 3)\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "print (accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "k_range = range(1, 30)\n",
-    "scores = []\n",
-    "for k in k_range:\n",
-    "    knn = KNeighborsClassifier(n_neighbors = k)\n",
-    "    knn.fit(X_train, y_train)\n",
-    "    y_pred = knn.predict(X_test)\n",
-    "    scores.append(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# for plotting the graph inside the notebook itself\n",
-    "%matplotlib inline\n",
-    "\n",
-    "plt.plot(k_range, scores)\n",
-    "plt.xlabel('Values of K')\n",
-    "plt.ylabel('Accuracy')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
@@ -518,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -526,10 +376,10 @@
     {
      "data": {
       "text/plain": [
-       "834"
+       "117"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -582,14 +432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.885408399471\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "model = RandomForestClassifier()\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "model = KNeighborsClassifier(n_neighbors = 30)\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
     "print (accuracy_score(y_test, y_pred))"
@@ -597,13 +455,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.96666667  0.          0.          0.          0.03333333]]\n"
+     ]
+    }
+   ],
    "source": [
-    "1+2"
+    "print(model.predict_proba(X_test[seed].reshape(1, -1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now testing with random sample from the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>1.385612</td>\n",
+       "      <td>1.950876</td>\n",
+       "      <td>2.086354</td>\n",
+       "      <td>-1.961474</td>\n",
+       "      <td>-0.300365</td>\n",
+       "      <td>-1.09726</td>\n",
+       "      <td>2.629279</td>\n",
+       "      <td>-1.290937</td>\n",
+       "      <td>0.465731</td>\n",
+       "      <td>0.258283</td>\n",
+       "      <td>1.774324</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2         3         4        5         6  \\\n",
+       "834  1.385612  1.950876  2.086354 -1.961474 -0.300365 -1.09726  2.629279   \n",
+       "\n",
+       "            7         8         9        10  class  \n",
+       "834 -1.290937  0.465731  0.258283  1.774324      0  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[seed]] # selects random observation from the df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.40682632, -3.78457253,  1.38890553,  1.54751922,  2.24052478]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.transform(df.iloc[[seed], :-1]) # passing only the features of random observation to the PCA to reduce it to 5 componenets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.03333333  0.          0.          0.96666667  0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.predict_proba(pca.transform(df.iloc[[seed], :-1])))"
    ]
   }
  ],
